Adicionado o Bootstrap e o jQuery ao index

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap.min.css">
+	<script src="vendor/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
 <div ng-view></div>
@@ -11,5 +13,6 @@
 <script src="js/main.js"></script>
 <script src="js/controllers/ContatosController.js"></script>
 <script src="js/controllers/ContatoController.js"></script>
+<script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
