--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="utf-8">
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap-theme.css">
 	<script src="vendor/jquery/dist/jquery.min.js"></script>
 </head>
-<body>
+<body class="container">
 <div ng-view></div>
 <script src="vendor/angular/angular.js"></script>
 <script src="vendor/angular-route/angular-route.js"></script>
